# patcher

./: .gitignore  .gitmodules  CMakeLists.txt  Kiseki.Patcher.sln  PolygonDLL.sln  PolygonDLLUtilities.sln  README.md  Tadah.DLL.sln  vcpkg.json
Detours/vc/ReleaseMD/: Detours.vcxproj.AssemblyReference.cache
Kiseki.Patcher/: CMakeLists.txt  Discord.cpp  Helpers.cpp  Kiseki.Patcher.rc  Kiseki.Patcher.vcxproj  Kiseki.Patcher.vcxproj.filters  Patches.cpp  Server.cpp  dllmain.cpp
Kiseki.Patcher/Header/: Configuration.hpp  Discord.hpp  Globals.hpp  Helpers.hpp  Patcher.hpp  Server.hpp
Kiseki.Patcher/Header/Hooks/: CRoblox.hpp  Context.hpp  Crypt.hpp  DataModel.hpp  Http.hpp  ServerReplicator.hpp  StandardOut.hpp
Kiseki.Patcher/Hooks/: CRoblox.cpp  Context.cpp  Crypt.cpp  DataModel.cpp  Http.cpp  ServerReplicator.cpp  StandardOut.cpp
Kiseki.Patcher/Include/: Configuration.h  Discord.h  Helpers.h  Patches.h  Server.h  pch.h  resource.h
Kiseki.Patcher/Include/Hooks/: CRoblox.h  Context.h  Crypt.h  DataModel.h  Http.h  ServerReplicator.h  StandardOut.h
Kiseki.Patcher/Resource/: Information.h  Script.rc
Kiseki.Patcher/Source/: Discord.cpp  Helpers.cpp  Patcher.cpp  Server.cpp  main.cpp
Kiseki.Patcher/Source/Hooks/: CRoblox.cpp  Context.cpp  Crypt.cpp  DataModel.cpp  Http.cpp  ServerReplicator.cpp  StandardOut.cpp
PolygonClientUtilities/: Application.cpp  Application.h  CRoblox.cpp  Classes.h  Config.h  Context.cpp  Context.h  Crypt.cpp  Crypt.h  DebugDatamodel.cpp  DebugDatamodel.h  DebugGame.cpp  DebugGame.h  DebugScriptContext.cpp  DebugScriptContext.h  Hooks.cpp  Hooks.h  Http.cpp  Http.h  Logger.cpp  Logger.h  MFCCommandLine.cpp  MFCCommandLine.h  Patches.cpp  Patches.h  PlayerCommandLine.cpp  PolygonClientUtilities.vcxproj  PolygonClientUtilities.vcxproj.filters  RCCOutput.cpp  RCCOutput.h  ReplicatorSecurity.cpp  ReplicatorSecurity.h  RobloxMFCClasses.h  RobloxMFCHooks.cpp  RobloxMFCHooks.h  ScriptContext.cpp  ScriptContext.h  ServerReplicator.cpp  StandardOut.cpp  StandardOut.h  (+10 more)
PolygonClientUtilities/Debug/: PolygonClientUtilities.dll.recipe  PolygonClientUtilities.ilk
PolygonClientUtilities/Hooks/: Application.cpp  Context.cpp
PolygonClientUtilities/Include/: Util.h
PolygonClientUtilities/Include/Hooks/: Http.h
PolygonDLL/: PolygonDLL.rc  PolygonDLL.vcxproj  PolygonDLL.vcxproj.filters
PolygonDLL/Hooks/: ContentProvider.cpp  Crypt.cpp  Http.cpp  StandardOut.cpp
PolygonDLL/Include/: Config.h  resource.h
PolygonDLL/Include/Hooks/: ContentProvider.h
Tadah.DLL/: Discord.cpp  Helpers.cpp  Patches.cpp  Server.cpp  Tadah.DLL.rc  Tadah.DLL.vcxproj  Tadah.DLL.vcxproj.filters  dllmain.cpp
Tadah.DLL/Hooks/: CRoblox.cpp  Context.cpp  Crypt.cpp  DataModel.cpp  Http.cpp  ServerReplicator.cpp  StandardOut.cpp
Tadah.DLL/Include/: Classes.h  Config.h  Configuration.h  Discord.h  Helpers.h  Patches.h  Server.h  pch.h
Tadah.DLL/Include/Hooks/: Application.h  CRoblox.h  Context.h  Crypt.h  DataModel.h  Http.h  ServerReplicator.h  StandardOut.h
